--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^8.0.0",
     "@angular/animations": "^14.0.5",
     "@angular/cdk": "^11.2.4",
     "@angular/common": "^14.0.5",
@@ -44,10 +45,13 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
+    "@ng-matero/extensions": "^14.0.0",
     "angular-bootstrap-datetimepicker": "^4.0.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
