Modal Working Fine

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "core-js": "^3.9.1",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
