--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@coreui/angular": "^2.11.2",
     "@coreui/coreui": "^2.1.16",
+    "@coreui/utils": "^1.3.1",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "^2.0.0-rc.0",
     "@coreui/icons-angular": "1.0.0-alpha.3",
